--- a/egrocery-deploy/views/cart.ejs
+++ b/egrocery-deploy/views/cart.ejs
@@ -230,7 +230,7 @@
                             customClass: 'small-toast', // Apply your custom CSS class
                             }).then((result) => {
     if (result.dismiss === Swal.DismissReason.timer) {
-      window.location.href = '/myorders'; 
+      window.location.href = '/feedback'; 
   }});
             } else {
               alert(data.error); // You can customize this message
